# cveapi

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 3fe71999c7f9_add_cve_id_to_bdu_model.py  77440ffccb86_create_tables.py  bef36b47bfa6_create_models.py  dea7b018a6d0_add_cwe_table.py
app/api/: deps.py  main.py
app/api/routes/: bdu.py  cve.py  cwe.py  nvd.py
app/core/: config.py  db.py
app/models/: __init__.py  base.py  bdu.py  cve.py  cwe.py  nvd.py
app/schemas/: bdu.py  cve.py  cwe.py  nvd.py
core/: Dockerfile  alembic.ini  main.py  pyproject.toml
core/alembic/: env.py
core/alembic/versions/: 4e36e1b9974e_add_cve_model_for_poc.py  57d3587f476b_create_tables.py  59a69392477f_add_hash_sum_to_models.py  75ab08d04f5c_add_cve_model_for_poc.py
core/api/: deps.py  main.py
core/api/routes/: bdu.py  cve.py  cwe.py  nvd.py  poc.py
core/core/: config.py  db.py
core/models/: __init__.py  base.py  bdu.py  cve.py  cwe.py  nvd.py
core/schemas/: bdu.py  cve.py  cwe.py  nvd.py
core/templates/: base.html  base_2.html
core/tests/: conftest.py
core/tests/api/routes/: test_bdu.py  test_cwe.py  test_nvd.py
core/utils/: color.py
scripts/: .env.example  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
updater/: .env.example  Dockerfile  __init__.py  cli.py  config.py  main.py  models.py  pyproject.toml  res.txt  update.py  utils.py
