[tool.poetry]
name = "cveapi"
version = "0.0.1"
description = ""
authors = ["kill_your_soul <platonovdi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
sqlmodel = "^0.0.16"
pydantic-settings = "^2.2.1"
psycopg2 = "^2.9.9"
psycopg = {extras = ["binary"], version = "^3.1.18"}
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
coverage = "^7.4.4"
pytest = "^8.1.1"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
