[tool.poetry]
name = "cveapi"
version = "0.0.1"
description = ""
authors = ["kill_your_soul <platonovdi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
sqlmodel = "^0.0.16"
pydantic-settings = "^2.2.1"
psycopg2 = "^2.9.9"
psycopg = {extras = ["binary"], version = "^3.1.18"}
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
coverage = "^7.4.4"
pytest = "^8.1.1"
httpx = "^0.27.0"
mypy = "^1.9.0"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "FA100",
    "RET504",
    "A002",
    "ANN101",
    "SIM108",
    "S113",
    "T201"
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

# follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
# attr-defined = false

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
