[tool.poetry]
name = "cveapi-updater"
version = "0.0.1"
description = ""
authors = ["kill_your_soul <platonovdi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.2.1"
requests = "^2.31.0"
openpyxl = "^3.1.2"
celery = {extras = ["redis"], version = "^5.3.6"}
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "FA100",
    "RET504",
    "A002",
    "ANN101",
    "SIM108",
    "S113",
    "T201",
    "ERA001"
]

[tool.ruff]
target-version = "py310"
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
